--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,7 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017
 JWT_SECRET=your_jwt_secret
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_key
+CLOUDINARY_API_SECRET=your_secret
 
